--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.8.7",
     "eslint": "^8",
     "eslint-config-next": "13.5.6"
   }
