Major Overhaul & Optimizations
- added 2024/2025 papers
- added search & filter functionality
- added multi-option sorting
- optimized skeleton loading
- optimized responsive viewport
- optimized parsing script (omitted)
- implemented various fallbacks
- fixed theme flashing on page load
- fixed footer element resizing on table load
- fixed various pagination issues
- general refactoring across components and layout

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": "src/",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/app/*": ["app/*"],
+      "@/components/*": ["components/*"]
     }
   }
 }
