--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.2",
-    "next": "13.5.6",
+    "next": "^14.2.3",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18"
